Fix: change payment buttons so that the arrows and icons dont misalign

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -38,8 +38,9 @@
 
 
 .payment-buttons {
+  padding: 24px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 4.5rem;
@@ -49,6 +50,11 @@
   border-radius: 9px;
   font-size: 20px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.payment-link {
+  margin: 0;
+  color: $white;
 }
 
 .button-background-colour {
